# LLM-Wall

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css  main.jsx
dashboard/src/components/: BlockchainLedger.jsx  GuardianStatus.jsx  MARLPolicy.jsx  PatternEvolution.jsx  ProviderHealth.jsx  SentinelMesh.jsx  ThreatFeed.jsx
llm_wall/: __init__.py  config.py  models.py
llm_wall/a2a/: bus.py  negotiation.py
llm_wall/api/: dashboard_router.py  ledger_router.py  patterns_router.py  sentinel_router.py
llm_wall/core/: app.py  middleware.py  provider_clients.py  router.py
llm_wall/guardian/: engine.py  llm_clients.py  pattern_updater.py
llm_wall/guardian/agents/: cot_inspector.py  fidelity_agent.py  injection_agent.py  intent_agent.py  risk_scorer.py
llm_wall/guardian/patterns/: injection_patterns.json  jailbreak_patterns.json
llm_wall/ledger/: blockchain.py  merkle.py  node.py
llm_wall/marl/: engine.py  environment.py  policies.py  q_table.py
llm_wall/mcp/: broker.py  schemas.py  tool_policies.py
llm_wall/sentinel/: gossip.py  ioc_store.py  node.py
llm_wall/tests/: test_guardian.py
nginx/: nginx.conf
scripts/: test.py  test_injection.py  verify_ledger.py
